--- a/appjedrez/src/app/components/user/signup/signup.component.html
+++ b/appjedrez/src/app/components/user/signup/signup.component.html
@@ -9,11 +9,11 @@
             </h3>
           </div>
           <div class="panel-body p-3">
-            <form [formGroup]="signupForm">
-              <div class="form-group pt-3">
+            <form class="container" [formGroup]="signupForm">
+              <div class="row pt-3">
                 <div class="input-field">
                   <input
-                    formControlName="firstName"
+                    formControlName="nombres"
                     class="form-control text-dark"
                     type="text"
                     placeholder="Nombre"
@@ -22,17 +22,17 @@
               </div>
               <small
                 *ngIf="
-                  signupForm.controls['firstName'].dirty &&
-                  signupForm.hasError('required', 'firstName')
+                  signupForm.controls['nombres'].dirty &&
+                  signupForm.hasError('required', 'nombres')
                 "
                 class="text-danger"
               >
                 *Nombre requerido
               </small>
-              <div class="form-group pt-3">
+              <div class="row pt-3">
                 <div class="input-field">
                   <input
-                    formControlName="lastName"
+                    formControlName="apellido"
                     class="form-control text-dark"
                     type="text"
                     placeholder="Apellido"
@@ -41,14 +41,34 @@
               </div>
               <small
                 *ngIf="
-                  signupForm.controls['lastName'].dirty &&
-                  signupForm.hasError('required', 'lastName')
+                  signupForm.controls['apellido'].dirty &&
+                  signupForm.hasError('required', 'apellido')
                 "
                 class="text-danger"
               >
                 *Apellido requerido
               </small>
-              <div class="form-group pt-3">
+              <div class="row pt-3">
+                <div class="input-field">
+                  <i class="bi bi-telephone-fill p-2"></i>
+                  <input
+                    formControlName="telefono"
+                    class="form-control text-dark"
+                    type="text"
+                    placeholder="Teléfono"
+                  />
+                </div>
+              </div>
+              <small
+                *ngIf="
+                  signupForm.controls['telefono'].dirty &&
+                  signupForm.hasError('required', 'telefono')
+                "
+                class="text-danger"
+              >
+                *Teléfono requerido
+              </small>
+              <div class="row pt-3">
                 <div class="input-field">
                   <i class="bi bi-envelope-fill p-2"></i>
                   <input
@@ -68,31 +88,31 @@
               >
                 *E-mail requerido
               </small>
-              <div class="form-group pt-3">
+              <div class="row pt-3">
                 <div class="input-field">
                   <i class="bi bi-person-fill p-2"></i>
                   <input
-                    formControlName="username"
+                    formControlName="nombreUsuario"
                     class="form-control text-dark"
                     type="text"
-                    placeholder="Username"
+                    placeholder="Usuario"
                   />
                 </div>
               </div>
               <small
                 *ngIf="
-                  signupForm.controls['username'].dirty &&
-                  signupForm.hasError('required', 'username')
+                  signupForm.controls['nombreUsuario'].dirty &&
+                  signupForm.hasError('required', 'nombreUsuario')
                 "
                 class="text-danger"
               >
                 *Usuario requerido
               </small>
-              <div class="form-group pt-3">
+              <div class="row pt-3">
                 <div class="input-field">
                   <i class="bi bi-lock-fill p-2"></i>
                   <input
-                    formControlName="password"
+                    formControlName="clave"
                     class="form-control text-dark"
                     [type]="type"
                     placeholder="Contraseña"
@@ -105,8 +125,8 @@
               </div>
               <small
                 *ngIf="
-                  signupForm.controls['password'].dirty &&
-                  signupForm.hasError('required', 'password')
+                  signupForm.controls['clave'].dirty &&
+                  signupForm.hasError('required', 'clave')
                 "
                 class="text-danger"
               >
