--- a/appjedrez/src/css/main.scss
+++ b/appjedrez/src/css/main.scss
@@ -1,11 +1,8 @@
-$light: #121821;
-$white: #ffffff;
-$dark: #000100;
-$primary: #002b70;
-$secondary: #cb0446;
-$info: #46499c;
-$success: #009756;
-$warning: #dec800;
-$danger: #ec1700;
+$primary: #d41731;
+$secondary: #513d4d;
+$info: #4a9948;
+$success: #589910;
+$warning: #febc5d;
+$danger: #ec0864;
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
