--- a/appjedrez/src/app/components/user/login/login.component.html
+++ b/appjedrez/src/app/components/user/login/login.component.html
@@ -1,90 +1,81 @@
-<div class="outer">
-  <div class="container">
-    <div class="row">
-      <div class="offset-md-2 col-md-7 offset-lg-4 col-lg-5 offset-md-3">
-        <div class="panel border bg-white">
-          <div class="panel-heading">
-            <h3 class="display-6 pt-3 font-weight-bold text-dark">
-              Iniciar Sesión
-            </h3>
-          </div>
-          <div class="panel-body p-3">
-            <form [formGroup]="loginForm">
-              <div class="form-group pt-3">
-                <div
-                  class="input-field"
-                  [class.error]="
-                    loginForm.controls['nombreUsuario'].dirty &&
-                    loginForm.hasError('required', 'nombreUsuario')
-                  "
-                >
-                  <i class="bi bi-person-fill p-2"></i>
-                  <input
-                    class="form-control text-dark"
-                    type="text"
-                    placeholder="Usuario"
-                    formControlName="nombreUsuario"
-                  />
-                </div>
+<div class="container">
+  <div class="row">
+    <div class="offset-md-2 col-md-8 offset-lg-3 col-lg-6 mt-5">
+      <div class="row bg-white rounded">
+        <div class="col-12 p-3">
+          <h3 class="display-6 text-dark">Iniciar Sesión</h3>
+        </div>
+        <div class="col-12 p-3">
+          <form class="container" [formGroup]="loginForm">
+            <div class="row pt-3">
+              <div class="col-12 input-group">
+                <span class="input-group-text">
+                  <i class="bi bi-person-fill text-primary"></i>
+                </span>
+                <input
+                  class="form-control text-dark"
+                  type="text"
+                  placeholder="Usuario"
+                  formControlName="nombreUsuario"
+                />
               </div>
-              <small
-                *ngIf="
-                  loginForm.controls['nombreUsuario'].dirty &&
-                  loginForm.hasError('required', 'nombreUsuario')
-                "
-                class="text-danger"
-              >
-                *Usuario requerido
-              </small>
-              <div class="form-group pt-3">
-                <div
-                  class="input-field"
-                  [class.error]="
-                    loginForm.controls['clave'].dirty &&
-                    loginForm.hasError('required', 'clave')
-                  "
-                >
-                  <i class="bi bi-lock-fill p-2"></i>
-                  <input
-                    class="form-control text-dark"
-                    [type]="type"
-                    formControlName="clave"
-                    placeholder="Contraseña"
-                  />
+            </div>
+            <small
+              *ngIf="
+                loginForm.controls['nombreUsuario'].dirty &&
+                loginForm.hasError('required', 'nombreUsuario')
+              "
+              class="text-danger"
+            >
+              *Usuario requerido
+            </small>
+            <div class="row pt-3">
+              <div class="input-group">
+                <span class="input-group-text">
+                  <i class="bi bi-lock-fill text-primary"></i>
+                </span>
+                <input
+                  class="form-control text-dark"
+                  [type]="type"
+                  formControlName="clave"
+                  placeholder="Contraseña"
+                />
+                <span class="input-group-text bg-white">
                   <i
                     (click)="ocultarMostrarPass()"
-                    class="bi {{ eyeIcon }}"
+                    class="bi {{ eyeIcon }} text-primary ojo"
                   ></i>
-                </div>
+                </span>
               </div>
-              <small
-                *ngIf="
-                  loginForm.controls['clave'].dirty &&
-                  loginForm.hasError('required', 'clave')
-                "
-                class="text-danger"
-              >
-                *Contraseña requerida
-              </small>
-              <div class="form-inline fr mt-4">
-                <a id="forget" class="font-weight-bold">
-                  ¿Olvidó su contraseña?
-                </a>
-              </div>
-              <button
-                (click)="onLogin()"
-                type="submit"
-                class="btn btn-primary btn-block mt-4 w-100"
-              >
-                Iniciar sesión
-              </button>
-              <div class="text-center pt-4 text-muted">
-                ¿No tiene cuenta?
-                <a id="forget" routerLink="/user/signup"> Registrese. </a>
-              </div>
-            </form>
-          </div>
-          <!-- <div class="mx-3 my-2 py-2 border-top">
+            </div>
+            <small
+              *ngIf="
+                loginForm.controls['clave'].dirty &&
+                loginForm.hasError('required', 'clave')
+              "
+              class="text-danger"
+            >
+              *Contraseña requerida
+            </small>
+            <div class="mt-4">
+              <a id="forget" class="link-primary"> ¿Olvidó su contraseña? </a>
+            </div>
+            <button
+              (click)="onLogin()"
+              type="submit"
+              class="btn btn-primary mt-4 w-100"
+            >
+              Iniciar sesión
+            </button>
+            <div class="text-center pt-4 text-muted">
+              ¿No tiene cuenta?
+              <a id="forget" routerLink="/user/signup" class="link-primary">
+                Registrese.
+              </a>
+            </div>
+          </form>
+        </div>
+        <!-- <div class="mx-3 my-2 py-2 border-top">
             <div class="text-center text-dark py-3">
               <p class="lead">
                 <em><small>O conectese con:</small></em>
@@ -97,7 +88,6 @@
               </a>
             </div>
           </div> -->
-        </div>
       </div>
     </div>
   </div>
