--- a/appjedrez/src/app/components/game/pgn-viewer/pgn-viewer.component.html
+++ b/appjedrez/src/app/components/game/pgn-viewer/pgn-viewer.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-dark" (click)="cargarPgn()">Cargar PGN</button>
+<button *ngIf="!cargado" class="btn btn-dark" (click)="cargarPgn()">Cargar PGN</button>
