--- a/appjedrez/src/app/components/user/dash/partidas/partidas.component.html
+++ b/appjedrez/src/app/components/user/dash/partidas/partidas.component.html
@@ -12,16 +12,23 @@
         <div class="row mx-1 gx-1 gy-1">
           <div class="col-12"><div class="rounded bg-light p-5"></div></div>
           <div class="col-12" *ngFor="let partida of partidas">
-            <div class="rounded bg-light p-3">
-              <div class="row align-items-center">
+            <div class="rounded bg-secondary p-3">
+              <div class="row align-items-center text-light">
                 <div class="col-7 border-end">
-                  <strong [class.text-.light]="" [class.text-dark]=""></strong>
+                  <strong class="badge rounded-pill text-bg-light">{{
+                    partida.jugadorBlancasNavigation?.nombreUsuario
+                  }}</strong>
                   VS.
-                  <strong [class.text-.light]="" [class.text-dark]=""></strong>
+                  <strong class="badge rounded-pill text-bg-dark">{{
+                    partida.jugadorNegrasNavigation?.nombreUsuario
+                  }}</strong>
                 </div>
                 <div class="col-3"></div>
                 <div class="col-2 text-end">
-                  <button class="btn btn-outline-primary rounded-circle">
+                  <button
+                    class="btn btn-outline-primary rounded-circle"
+                    (click)="irGame(partida.id)"
+                  >
                     <i class="bi bi-chevron-right"></i>
                   </button>
                 </div>
