--- a/appjedrez/src/app/components/user/dash/dashboard/dashboard.component.html
+++ b/appjedrez/src/app/components/user/dash/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<body class="bg-dark" style="min-height: 100vh">
+<body *ngIf="role !== 'Administrador'" class="bg-dark" style="min-height: 100vh">
   <app-navbar></app-navbar>
   <div class="container-fluid bg-secondary p-5">
     <div class="container px-5">
@@ -38,6 +38,55 @@
               [routerLink]="['/user/dashboard/partidas']"
               routerLinkActive="active"
               >Partidas</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="btn btn-secondary"
+              [routerLink]="['configuracion']"
+              routerLinkActive="active"
+              >Configuración</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</body>
+
+<body *ngIf="role == 'Administrador'" class="bg-dark" style="min-height: 100vh">
+  <app-navbar></app-navbar>
+  <div class="container-fluid bg-secondary p-5">
+    <div class="container px-5">
+      <div class="row justify-content-between">
+        <div class="col-sm-2">
+          <img
+            class="rounded img-fluid"
+            src="https://via.placeholder.com/100x100"
+          />
+        </div>
+        <div class="d-flex col-sm-3 align-items-center text-light">
+          <h4>{{ fullName }}</h4>
+        </div>
+        <div class="col-sm-2 offset-sm-5 d-flex align-items-center">
+          <button class="btn btn-danger text-light" (click)="logout()">
+            Cerrar Sesión
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-secondary p-2 border-top border-dark">
+    <div class="container px-5">
+      <div class="row">
+        <ul class="nav">
+          <li class="nav-item">
+            <a
+              class="btn btn-secondary"
+              [routerLink]="['/user/dashboard/config-organizadores']"
+              routerLinkActive="active"
+              >Organizadores</a
             >
           </li>
           <li class="nav-item">
