--- a/appjedrez/src/app/shared/shared-module/navbar/navbar.component.html
+++ b/appjedrez/src/app/shared/shared-module/navbar/navbar.component.html
@@ -38,6 +38,14 @@
             >Nuevo</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            [routerLink]="['/app/organizadores']"
+            routerLinkActive="active"
+            >Organizadores</a
+          >
+        </li>
       </ul>
       <div class="d-flex p-1">
         <a
