--- a/appjedrez/src/app/components/game/chess-game/chess-game.component.html
+++ b/appjedrez/src/app/components/game/chess-game/chess-game.component.html
@@ -1,29 +1,61 @@
-<div class="row">
-  <div class="col-md-4 offset-md-4">
+<div class="container-fluid py-2">
+  <div class="container px-5">
     <div class="row">
-      <div class="col-12 bg-dark text-white d-flex justify-content-evenly p-2">
-        <button class="btn btn-light" (click)="prevMove()">←</button>
-        <button class="btn btn-light" (click)="nextMove()">→</button>
+      <div class="col-md-2">
+        <button
+          class="btn btn-info text-light w-100"
+          (click)="analizar()"
+          *ngIf="!analisisExiste"
+        >
+          Analizar
+        </button>
       </div>
-      <div class="col-12 form-floating my-1">
-        <input
-          class="form-control w-100"
-          id="statusInput"
-          type="text"
-          [value]="status"
-          readonly
-        />
-        <label class="mx-1" for="statusInput">Status:</label>
+      <div class="col-md-10" *ngIf="analizado">
+        <div class="alert alert-info" role="alert">
+          El análisis puede tardar algunos minutos, podés volver más tarde para
+          ver si está listo.
+        </div>
       </div>
-      <div class="col-12 form-floating my-1">
-        <input
-          class="form-control w-100"
-          id="fenInput"
-          type="text"
-          [value]="fen"
-          readonly
-        />
-        <label class="mx-1" for="fenInput">FEN:</label>
+    </div>
+  </div>
+</div>
+<div class="container-fluid py-4">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-4 bg-dark">
+        <div id="board"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <div class="row">
+          <div
+            class="col-12 bg-dark text-white d-flex justify-content-evenly p-2"
+          >
+            <button class="btn btn-light" (click)="prevMove()">←</button>
+            <button class="btn btn-light" (click)="nextMove()">→</button>
+          </div>
+          <div class="col-12 form-floating my-1">
+            <input
+              class="form-control w-100"
+              id="statusInput"
+              type="text"
+              [value]="status"
+              readonly
+            />
+            <label class="mx-1" for="statusInput">Status:</label>
+          </div>
+          <div class="col-12 form-floating my-1">
+            <input
+              class="form-control w-100"
+              id="fenInput"
+              type="text"
+              [value]="fen"
+              readonly
+            />
+            <label class="mx-1" for="fenInput">FEN:</label>
+          </div>
+        </div>
       </div>
     </div>
   </div>
