--- a/appjedrez/src/app/components/game/pgn-viewer/pgn-viewer.component.html
+++ b/appjedrez/src/app/components/game/pgn-viewer/pgn-viewer.component.html
@@ -1,55 +1,59 @@
-<div class="row">
-  <div class="col-12 text-light mt-4">
-    <h3 class="display-5">Partida sin cargar</h3>
-    <p class="lead">
-      La partida que intenta visualizar carece de un archivo PGN que permita
-      determinar los movimientos hechos en el juego.
-    </p>
-    <p class="lead">
-      Por el momento deberá esperar a que un organizador cargue dicha partida, o
-      si usted es el organizador puede hacerlo aquí mismo presionando en el
-      botón
-      <span class="text-primary">Cargar PGN</span>
-    </p>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-6 text-center mt-4">
-      <button
-        *ngIf="esOrganizador"
-        class="btn btn-primary w-100"
-        (click)="abrirModal()"
-      >
-        Cargar PGN
-      </button>
+<div class="container-fluid py-2">
+  <div class="container px-5">
+    <div class="row">
+      <div class="col-12 text-light mt-2">
+        <h3 class="display-5">Partida sin cargar</h3>
+        <p class="lead">
+          La partida que intenta visualizar carece de un archivo PGN que permita
+          determinar los movimientos hechos en el juego.
+        </p>
+        <p class="lead">
+          Por el momento deberá esperar a que un organizador cargue dicha
+          partida, o si usted es el organizador puede hacerlo aquí mismo
+          presionando en el botón
+          <span class="text-primary">Cargar PGN</span>
+        </p>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-6 text-center mt-2">
+          <button
+            *ngIf="esOrganizador"
+            class="btn btn-primary w-100"
+            (click)="abrirModal()"
+          >
+            Cargar PGN
+          </button>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
-<div class="row z-3 text-dark" [hidden]="cargarPgnFlag">
-  <div
-    class="col-4 bg-light rounded-1 position-fixed top-50 start-50 border border-dark p-2 translate-middle"
-  >
-    <form class="row form">
-      <div class="col-12 my-1">
-        <textarea
-          class="form-control w-100"
-          name="textPgn"
-          id="pgn"
-          cols="30"
-          rows="10"
-          [(ngModel)]="pgn"
-        ></textarea>
+    <div class="row z-3 text-dark" [hidden]="cargarPgnFlag">
+      <div
+        class="col-4 bg-light rounded-1 position-fixed top-50 start-50 border border-dark p-2 translate-middle"
+      >
+        <form class="row form">
+          <div class="col-12 my-1">
+            <textarea
+              class="form-control w-100"
+              name="textPgn"
+              id="pgn"
+              cols="30"
+              rows="10"
+              [(ngModel)]="pgn"
+            ></textarea>
+          </div>
+          <div class="col-md-6">
+            <button class="btn btn-dark w-100 my-1" (click)="cargarPgn()">
+              Cargar
+            </button>
+          </div>
+          <div class="col-md-6">
+            <button class="btn btn-dark w-100 my-1" (click)="abrirModal()">
+              Cancelar
+            </button>
+          </div>
+        </form>
       </div>
-      <div class="col-md-6">
-        <button class="btn btn-dark w-100 my-1" (click)="cargarPgn()">
-          Cargar
-        </button>
-      </div>
-      <div class="col-md-6">
-        <button class="btn btn-dark w-100 my-1" (click)="abrirModal()">
-          Cancelar
-        </button>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
