--- a/appjedrez/src/app/components/torneo/detalles/detalle/detalle.component.html
+++ b/appjedrez/src/app/components/torneo/detalles/detalle/detalle.component.html
@@ -17,8 +17,8 @@
           </li>
           <li class="list-group-item">Se juega en: {{ torneo.localidad }}</li>
           <li class="list-group-item">
-            Organizador: {{ torneo.organizador.nombres }}
-            {{ torneo.organizador.apellido }}
+            Organizador: {{ torneo.idOrganizadorNavigation.nombres }}
+            {{ torneo.idOrganizadorNavigation.apellido }}
           </li>
         </ul>
       </div>
