--- a/appjedrez/src/app/components/torneo/detalles/listado-partidas/listado-partidas.component.html
+++ b/appjedrez/src/app/components/torneo/detalles/listado-partidas/listado-partidas.component.html
@@ -25,7 +25,10 @@
           </td>
           <td>{{ partida.resultado | partida }}</td>
           <td>
-            <button class="btn btn-primary badge rounded-pill">
+            <button
+              class="btn btn-primary badge rounded-pill"
+              (click)="irPartida(partida.id)"
+            >
               <i class="bi bi-caret-right-fill text-white"></i>
             </button>
           </td>
